add:ibus remove:migemo change:font,recentf, .gitignore
ibus.elを追加.前は特に追加しなくてもibusで入力出来てたのに何故だろう.
しかし,ibus.elの独自機能が便利だから結果オーライ.
例えば日本語入力時のカラー変更とか便利.

migemo,そもそも自分は名前から日本語排除してるからあんまりいらないし,検索にでしゃばってくるので,コメントアウトしておいた.

fontを10pt→10pxに変更.
尚,10pxは10.5pt相当.
pxで偶数にしないと,等幅フォントでも,全角文字が半角文字2つ分にならないことに気がついた.
それに,こちらのほうがより多くの環境に対応できる.LetinaDisplay欲しいよー…

recentfの領域を10倍に増やす.

emacsのpackage,gitで追うの止めました.非常にログが汚くなる.役割被るし.
もしこの .emacs.d をcloneして使う人が居たら申し訳ないけど,居ないでしょ…だからよし.

このコミットが遺書になるとはこの時知る由もなかったのであった…

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,9 @@
 %backup%~
-.emacs-places
 ac-comphist.dat
 anything-c-adaptive-history
-auto-save-list
-backup
+auto-save-list/
+elpa/
 tramp
-undohist
+undohist/
 
 *.elc
