add:sdic,sdic-inline fix:omake-mode
sdicを追加.自動翻訳に加え,M-lで主導翻訳.
しかしGENE辞書はお世辞にも語彙に富むとは言えない…英辞郎を買うのが一番良いのだが.

omake-modeは音声編集するのがめんどくさいので8秒にするのにハードコーディング.
外部から編集しちゃいました.

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
 *.elc
 
+%backup%~
 ac-comphist.dat
 anything-c-adaptive-history
 auto-save-list/
 elpa/
+eshell
+image-dired
 tramp
 undohist/
-%backup%~
