common lisp用の環境を整える slimeとか それに合わせてetagsの環境を整える 保存したらTAGS自動更新の函数とか書いた jaspace導入してタブ可視化 コードをそのままの色でHTML+CSS化するhtmlize-and-browse elを自動保存しないようにした 自動バイトコンパイルする奴のエラーが鬱陶しい

--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,9 @@
 %backup%~
 ac-comphist.dat
 anything-c-adaptive-history
-auto-save-list/
+auto-save-list
 eshell
 image-dired
 tramp
-undohist/
+undohist
+var
