modified: mine -> module

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
-[submodule "mine/ncaq-emacs-utils"]
-	path = mine/ncaq-emacs-utils
-	url = https://github.com/ncaq/ncaq-emacs-utils.git
-[submodule "mine/symbolword-mode"]
-	path = mine/symbolword-mode
+[submodule "module/symbolword-mode"]
+	path = module/symbolword-mode
 	url = https://github.com/ncaq/symbolword-mode.git
+[submodule "module/ncaq-emacs-utils"]
+	path = module/ncaq-emacs-utils
+	url = https://github.com/ncaq/ncaq-emacs-utils.git
