build(dev-env): Nix Flakes対応の開発環境構築ファイルを追加
- .envrcでdirenvとNix Flakesを利用した環境変数ロードを自動化
- flake.nix/flake.lockでNix Flakesによる依存管理とフォーマッタ設定を導入
- .gitignoreにNix Flakes関連ファイルと.envrcを追記し管理対象化

--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,13 @@
 !.editorconfig
 !.editorconfig-checker.json
 !.elisp-autofmt
+!.envrc
 !.gitignore
 !.mc-lists.el
 !CLAUDE.md
 !LICENSE
 !README.md
 !early-init.el
+!flake.lock
+!flake.nix
 !init.el
