--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -10,6 +10,18 @@ permissions:
   contents: read
 
 jobs:
+  nix-flake-check:
+    runs-on: ubuntu-24.04
+    steps:
+      - uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6
+        with:
+          persist-credentials: false
+      - uses: cachix/install-nix-action@4e002c8ec80594ecd40e759629461e26c8abed15 # v31
+        with:
+          extra_nix_config: |
+            accept-flake-config = true
+      - run: nix flake check
+
   elisp-autofmt:
     runs-on: ubuntu-24.04
     steps:
