--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -25,8 +25,10 @@ jobs:
   elisp-autofmt:
     runs-on: ubuntu-24.04
     steps:
-      - uses: actions/checkout@v6
-      - uses: purcell/setup-emacs@v7.0
+      - uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6
+        with:
+          persist-credentials: false
+      - uses: purcell/setup-emacs@7a92187aa5b5a3b854cbdfa47499fbd3d1207163 # v7.0
         with:
           version: 30.2
       - run: git clone --depth=1 https://codeberg.org/ideasman42/emacs-elisp-autofmt.git
