--- a/.editorconfig
+++ b/.editorconfig
@@ -28,14 +28,12 @@ indent_style = tab
 # Markdownには最後にスペース2つ入れて強制改行するシンタックスがあるので末尾のスペースを許可。
 # 注意: なるべく強制改行は使わず、意味で段落して、改行位置はクライアントのデバイスに任せるべきです。
 trim_trailing_whitespace = false
-# MarkdownはURLやコード例が長くなることが多いため行幅制限を緩めます。
-max_line_length = 200
 # MarkdownはCommonMark準拠パーサーでは箇条書きリストのネストは2スペースでも動作し、
 # 番号付きリストはマーカー幅に依存するため固定値での指定は不適切です。
 # よって`indent_size = 4`を指定するのも不適切なため指定せず親の値を継承します。
 
-[*.nix]
-# Nix言語を使った設定はコメントなどでURLやコード例が長くなることが多いため行幅制限を緩めます。
+[*.{md,nix,yml,yaml}]
+# 設定やドキュメントのファイルはコメントなどでURLやコード例が長くなることが多いため行幅制限を緩めます。
 max_line_length = 200
 
 [*.bat]
